--- a/style.css
+++ b/style.css
@@ -1,27 +1,22 @@
 /* --GLOBAL-- */
 
+@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,400;0,700;1,400;1,700&family=Saira:ital,wght@0,700;1,700&display=swap');
+
 :root {
-    --white: #fff;
-    --blueberry: #050542;
-    --turquoise: #66e5bf;
-    --lavender: #a675f5;
-    --attention: #050542;
-    --attention-background: #05054233;
-    --call-to-action: #fffc86;
-    --rounded: .4rem;
-    --pilled: 1.4rem;
-    --shadow: .3rem;
-    --border: .15rem;
+    --primary: #00DCB9;
+    --secondary: #0A192D;
+    --tertiary: #D7EBEB;
  }
+ 
  * {
     box-sizing: border-box;
  }
  body{
     margin: 1rem; 
     padding: 0;
-    font-family: "Open Sans", sans-serif;
+    font-family: 'Mulish', sans-serif;
     font-size: 1.2rem;
     line-height: 1.4;
-    background: var(--blueberry);
-    color: var(--white);
+    background: white;
+    color: var(--secondary);
  }
