--- a/style.css
+++ b/style.css
@@ -80,8 +80,14 @@ header > img{
    background-color: var(--tertiary);
    z-index: -1;
    align-items: left;
-   margin: -3rem 0rem 0rem -12rem
+   margin: -3rem 0rem 0rem -12rem;
+   overflow-x: hidden;
+}
 
+.current-jobs > div{
+   max-width: 500px;
+   max-height: 500px;
+   overflow: hidden;
 }
 
 .current-jobs >  p > a{
@@ -95,10 +101,25 @@ header > img{
    font-weight: 700;
 }
 
-.con-offer-jobs > img:hover{
+.con-offer-jobs > div {
+      max-width: 100%;
+      max-height: 15rem;
+      overflow: hidden;
+}
+
+.con-offer-jobs > div > img {
+   width: 100%;
+   height: 100%;
+   object-fit: cover;
+   object-position: 50% 50%;
+   transition: transform 0.3s ease;
+}
+
+.con-offer-jobs > div > img:hover{
    cursor: pointer;
-   transition-duration: 0.2s;
-   transform: scale(1.1);
+   object-fit: cover;
+   object-position: 50% 50%;
+   transform:scale(1.1);
 }
 
 .section-badge-arrow{
