--- a/style.css
+++ b/style.css
@@ -207,6 +207,30 @@ section{
    padding: 1.5rem 2rem 4rem 2rem;
  }
 
+ .image-carousel {
+   padding: 0;
+ }
+
+ .image-list {
+   overflow-x: scroll;
+   overflow-y: hidden;
+   display: flex;
+   grid-row-start: 2;
+ }
+
+ .image-list a {
+   display: flex;
+   min-width: 45vw;
+   margin-right: 10px;
+ }
+
+ .image-list-img {
+   -o-object-fit: cover;
+   object-fit: cover;
+   transition: 0.3s ease all;
+   margin: 0;
+ }
+
  .con-process{
    width: 100%;
    background-color: var(--tertiary);
@@ -245,18 +269,18 @@ section{
    margin-top: 1.5rem;
    padding-bottom: 1rem;
    outline: none;
-   max-width: fit-content;
  }
 
  .form-labels [type=submit]{
    background-color: var(--primary);
    color: var(--secondary);
    font-family: 'Saira', sans-serif;
-   border-radius: 25px;
+   border-radius: 50px;
    padding: 1rem;
    font-size: 1rem;
    width: 10rem;
    cursor: pointer;
+   border: none;
  }
 
  .form-labels [type=submit]:hover{
@@ -388,7 +412,6 @@ section{
    .form-labels{
       width: 100%;
       display: flex;
-      justify-content: flex-start;
       flex-direction: row;
       font-size: 1.5rem;
    }
@@ -415,6 +438,9 @@ section{
       margin: auto;
       min-width: 100%;
       order: 1;
+      max-width: 30rem;
+      max-height: 40rem;
+      object-fit: cover;
    }
 
    .con-top-head > div > div > a{
@@ -442,8 +468,8 @@ section{
    }
 
    p{
-      font-size: 1.6rem;
-      line-height: 3rem;
+      font-size: 1.25rem;
+      line-height: 2.5rem;
    }
 
    .con-offer-jobs{
@@ -466,11 +492,23 @@ section{
       padding: 4rem 10rem 8rem 20rem
    }
 
+   .con-top-head{
+      margin-bottom: -8rem;
+   }
+
    .con-top-head > div > img{
-      width: 40rem;
+      max-width: 30rem;
+      max-height: 40rem;
+      object-fit: cover;
+   }
+
+   .con-top-head > div > div > p{
+      font-size: 1.5rem;;
+      line-height: 3rem;
    }
 
    .con-top-head > div > div > a{
-      font-size: 1.6rem;;
+      font-size: 1.25rem;;
    }
+
 }
